--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "node-sass": "^5.0.0",
+    "nodemailer": "^6.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-lottie": "^1.2.3",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.2",
     "styled-components": "^5.2.3",
-    "styled-icons": "^10.31.0",
+    "styled-icons": "^10.32.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -40,5 +46,19 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pegahfallah/portfolio-2021.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/pegahfallah/portfolio-2021/issues"
+  },
+  "homepage": "https://github.com/pegahfallah/portfolio-2021#readme"
 }
