timeline cards changed

--- a/package.json
+++ b/package.json
@@ -60,5 +60,5 @@
   "bugs": {
     "url": "https://github.com/pegahfallah/portfolio-2021/issues"
   },
-  "homepage": "https://github.com/pegahfallah/portfolio-2021#readme"
+  "homepage": "/"
 }
